--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Kawsurilu</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="author" name="Mir Md Kawsur">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -104,9 +103,10 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Mir Md Kawsur</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Java Developer</span></p>
                       <p><span class="title-s">Email: </span> <span>kawsurilu@yahoo.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>((+880) 1518917616)</span></p>
+                      <p><span class="title-s">Phone: </span> <span>((+880) 1518917616)</span></p>                      
+                      <p><span class="title-s">GitHub: </span> <span>https://github.com/kawsurilu</span></p>
                     </div>
                   </div>
                 </div>
@@ -122,7 +122,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>PHP</span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -137,7 +137,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Java</span> <span class="pull-right">90%</span>
+                  <span>Java</span> <span class="pull-right">95%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -152,8 +152,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I am working as a full-stack software developer for more than four years. Completed my Masters in
-                    Intelligent Systems from American International University-Bangladesh (AIUB)
+                    Passionate about coding, teaching, and spreading tech knowledge. Mir Md Kawsur, born in Dhaka, Bangladesh, completed his bachelor's and master's in computer science at American International University-Bangladesh (AIUB). With an unwavering love for coding, he embarked on a career as a programmer before transitioning to the fulfilling world of teaching.
                   </p>
                   <p class="lead">
                     I like to travel in different places, happy to meet new people. Try to learn from the nature.
@@ -305,7 +304,7 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">4.1</p>
+              <p class="counter">7</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
