--- a/index.html
+++ b/index.html
@@ -744,6 +744,8 @@
                       <!-- <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li> -->
                       <li><a href="https://twitter.com/kawsurilu"><span class="ico-circle"><i
                               class="ion-social-twitter"></i></span></a></li>
+                      <li></li><a href="https://www.linkedin.com/in/mir-md-kawsur-a036b068/"><span class="ico-circle"><i 
+                              class="ion-social-linkedin"></i></span></a></li>
                       <!-- <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
                     </ul>
                   </div>
